# tiny-cnn

./: CMakeLists.txt  ImageData.txt  ModelParam.txt  README.md  cnn_const.c  cnn_ncnn.cpp  cnn_ort.cpp  cnn_struct.c
layers/: config.h  layers.c  layers.h
models/: model.onnx  model.param
